power plant and start of lightning dock sections finished

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -51,6 +51,7 @@
 \newacronym{pca}{PCA}{Principle Component Analysis}
 \newacronym{pdf}{PDF}{Probability Density Function}
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
+\newacronym{pnm}{PNM}{Public Service Company of New Mexico}
 \newacronym{ppa}{PPA}{Power Purchase Agreement}
 \newacronym{relu}{ReLU}{Rectified Linear Unit}
 \newacronym{rfe}{RFE}{Recursive Feature Elimination}
