--- a/templates/chap3.tex
+++ b/templates/chap3.tex
@@ -52,10 +52,10 @@ Polyline data can also be fit with smooth curves using the same density concept.
 A multitude of algorithms exist for the purpose of fitting a set of values with a surface, thereby providing a means for interpolating missing values. Methods used in this thesis include the following four operations:
 
 \begin{itemize}
-\item{\textbf{Splines}}\label{ch3:splines} - Spline functions have a well-defined mathematical formulation that minimizes curvature while exactly fitting the input points. Regularized splines add a third derivative term, controlled by a weight parameter, that enforces a higher degree of smoothness with the trade-off of some misfit of the input data. This is helpful if outliers in the input point set would otherwise distort the spline fit. For details on the ArcGIS implementation, refer to the \textit{Interpolation toolset} documentation on the \textit{Spline} function \citep{esri_how_2021-2}.
-\item{\textbf{Topo to Raster}}\label{ch3:topo2r} - The \textit{Topo to Raster} operation creates surfaces that honor the input data, typically contour sets, while ensuring i) correct representation of abrupt morphological features like rivers and ridges and ii) connectedness of drainage patterns. Specifically, \textit{Topo to Raster} uses an iterative finite difference method and an algorithm to remove sink points not supported by the input data, assuming natural sinks are rare and erroneous features in an interpolated surface. For details on the ArcGIS implementation, refer to the \textit{Interpolation toolset} documentation on the \textit{Topo to Raster} function \citep{esri_how_2021-1}.
-\item{\textbf{Ordinary Kriging}}\label{ch3:kriging} - Kriging methods are geostatistical algorithms that take the correlation distance and directional bias into account when creating a surface. The two tasks involved in kriging include first estimating the functions that characterize these spatial relationships, then using these functions to generate predictions for interpolation (and extrapolation). For the first task, semivariograms are calculated by binning the semivariance of points based their distance from each other, then fitting a model curve (e.g. linear, spherical, exponential) to these values. Semivariograms can be anisotropic, meaning they can vary with direction. The second task uses the semivariogram to define a weighted average of the input data when estimating new values. For more details on the ArcGIS implementation, refer to the \textit{Interpolation toolset} documentation on the \textit{Kriging} function \citep{esri_how_2021}.
-\item{\textbf{\acrlong{ebk} (\acrshort{ebk})}}\label{ch3:ebk} - The EBK algorithm extends ordinary kriging by automating parameter selections and accounting for uncertainty in semivariogram estimation. Ordinary kriging generates a single variogram and treats it as ground truth while EBK generates an ensemble of semivariograms that can be used for greater accuracy in estimating standard errors. As a computationally heavy methodology, EBK takes much longer to apply than ordinary kriging or other methods. For more details on the ArcGIS implementation, refer to the documentation on the \textit{Empirical Bayes Kriging} function \citep{esri_what_2021}.
+\item{\textbf{Splines}}\label{ch3:splines} - Spline functions have a well-defined mathematical formulation that minimizes curvature while exactly fitting the input points. Regularized splines add a third derivative term, controlled by a weight parameter, that enforces a higher degree of smoothness with the trade-off of some misfit of the input data. This is helpful if outliers in the input point set would otherwise distort the spline fit. For details on the ArcGIS implementation, refer to the \textit{Interpolation toolset} documentation on the \textit{Spline} function \citep{esri_spline_2021}.
+\item{\textbf{Topo to Raster}}\label{ch3:topo2r} - The \textit{Topo to Raster} operation creates surfaces that honor the input data, typically contour sets, while ensuring i) correct representation of abrupt morphological features like rivers and ridges and ii) connectedness of drainage patterns. Specifically, \textit{Topo to Raster} uses an iterative finite difference method and an algorithm to remove sink points not supported by the input data, assuming natural sinks are rare and erroneous features in an interpolated surface. For details on the ArcGIS implementation, refer to the \textit{Interpolation toolset} documentation on the \textit{Topo to Raster} function \citep{esri_topo_2021}.
+\item{\textbf{Ordinary Kriging}}\label{ch3:kriging} - Kriging methods are geostatistical algorithms that take the correlation distance and directional bias into account when creating a surface. The two tasks involved in kriging include first estimating the functions that characterize these spatial relationships, then using these functions to generate predictions for interpolation (and extrapolation). For the first task, semivariograms are calculated by binning the semivariance of points based their distance from each other, then fitting a model curve (e.g. linear, spherical, exponential) to these values. Semivariograms can be anisotropic, meaning they can vary with direction. The second task uses the semivariogram to define a weighted average of the input data when estimating new values. For more details on the ArcGIS implementation, refer to the \textit{Interpolation toolset} documentation on the \textit{Kriging} function \citep{esri_kriging_2021}.
+\item{\textbf{\acrlong{ebk} (\acrshort{ebk})}}\label{ch3:ebk} - The EBK algorithm extends ordinary kriging by automating parameter selections and accounting for uncertainty in semivariogram estimation. Ordinary kriging generates a single variogram and treats it as ground truth while EBK generates an ensemble of semivariograms that can be used for greater accuracy in estimating standard errors. As a computationally heavy methodology, EBK takes much longer to apply than ordinary kriging or other methods. For more details on the ArcGIS implementation, refer to the documentation on the \textit{Empirical Bayes Kriging} function \citep{esri_empirical_2021}.
 
 \end{itemize}
 
