--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,11 +1,97 @@
 
+@misc{oconnell_matter_2018,
+	address = {Santa Fe, NM, USA},
+	title = {In the {Matter} of {Public} {Service} {Company} of {New} {Mexico}'s {Application} for {Approval} of its {Renewable} {Energy} {Act} {Plan} for 2019 and {Proposed} 2019 {Rider} {Rate} {Under} {Rate} {Rider} {No}. 36},
+	url = {https://www.pnm.com/documents/396023/8638670/2019+Renewable+Plan--+Direct+Testimonies.pdf/e15005a0-809c-16f4-f722-ee9c0214d938},
+	author = {{O'Connell}},
+	month = jun,
+	year = {2018},
+}
+
+@misc{goodman_lightning_2013,
+	address = {Deming, NM, USA},
+	type = {Legislative {Committee}},
+	title = {Lightning {Dock} {Geothermal}},
+	url = {https://www.nmlegis.gov/handouts/STTC%20091312%20Item%200%20Cryq%20Energy%20Presenation.pdf},
+	author = {Goodman, Nicholas and Smiley, Chuck},
+	month = sep,
+	year = {2013},
+}
+
+@techreport{elston_geology_1983,
+	address = {Socorro, NM, USA},
+	title = {Geology and geothermal waters of {Lightning} {Dock} region, {Animas} {Valley} and {Pyramid} {Mountains}, {Hidalgo} {County}, {New} {Mexico}},
+	institution = {New Mexico Bureau of Mines and Mineral Resources},
+	author = {Elston, Wolfgang E and Deal, Edmond G and Logsdon, Mark J},
+	year = {1983},
+}
+
+@misc{esri_topo_2021,
+	title = {Topo to {Raster}},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-topo-to-raster-works.htm},
+	urldate = {2021-06-17},
+	journal = {How Topo to Raster works},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@misc{esri_spline_2021,
+	title = {Spline},
+	shorttitle = {How {Spline} works},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-spline-works.htm},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@misc{esri_empirical_2021,
+	title = {Empirical {Bayes} {Kriging}},
+	shorttitle = {What is {Empirical} {Bayes} {Kriging}},
+	url = {https://pro.arcgis.com/en/pro-app/latest/help/analysis/geostatistical-analyst/what-is-empirical-bayesian-kriging-.htm},
+	language = {en},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
 @misc{esri_kernel_2021,
 	title = {Kernel {Density}},
+	shorttitle = {How {Kernel} {Density} {Works}},
 	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-analyst/how-kernel-density-works.htm},
 	urldate = {2021-06-17},
 	journal = {ArcGIS Pro {\textbar} Documentation},
 	author = {{ESRI}},
 	year = {2021},
+}
+
+@misc{esri_kriging_2021,
+	title = {Kriging},
+	shorttitle = {How {Kriging} {Works}},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-kriging-works.htm},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@article{moore_more_2013,
+	title = {More power from below},
+	volume = {340},
+	issn = {0036-8075},
+	number = {6135},
+	journal = {Science},
+	author = {Moore, Joseph N and Simmons, Stuart F},
+	year = {2013},
+	note = {Publisher: American Association for the Advancement of Science},
+	pages = {933--934},
+}
+
+@misc{noauthor_how_nodate,
+	title = {How {Geothermal} {Energy} {Works} {\textbar} {SaveOnEnergy}.com},
+	url = {https://www.saveonenergy.com/how-geothermal-energy-works/},
+	urldate = {2021-07-19},
 }
 
 @techreport{vose_temperature_2017,
@@ -1042,43 +1128,6 @@ Publisher: [Cambridge, Mass.] : Energy Laboratory, Massachusetts Institute of Te
 	author = {Sani, Habiba Muhammad and Lei, Ci and Neagu, Daniel},
 	year = {2018},
 	pages = {191--197},
-}
-
-@misc{esri_what_2021,
-	title = {What is {Empirical} {Bayes} {Kriging}},
-	url = {https://pro.arcgis.com/en/pro-app/latest/help/analysis/geostatistical-analyst/what-is-empirical-bayesian-kriging-.htm},
-	language = {en},
-	urldate = {2021-06-17},
-	journal = {ArcGIS Pro {\textbar} Documentation},
-	author = {{ESRI}},
-	year = {2021},
-}
-
-@misc{esri_how_2021,
-	title = {How {Kriging} works},
-	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-kriging-works.htm},
-	urldate = {2021-06-17},
-	journal = {ArcGIS Pro {\textbar} Documentation},
-	author = {{ESRI}},
-	year = {2021},
-}
-
-@misc{esri_how_2021-1,
-	title = {How {Topo} to {Raster} works},
-	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-topo-to-raster-works.htm},
-	urldate = {2021-06-17},
-	journal = {ArcGIS Pro {\textbar} Documentation},
-	author = {{ESRI}},
-	year = {2021},
-}
-
-@misc{esri_how_2021-2,
-	title = {How {Spline} works},
-	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/3d-analyst/how-spline-works.htm},
-	urldate = {2021-06-17},
-	journal = {ArcGIS Pro {\textbar} Documentation},
-	author = {{ESRI}},
-	year = {2021},
 }
 
 @book{silverman_density_1986,
